--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "eth-sig-util": "^3.0.1",
+    "ethers": "^5.5.4",
     "framer-motion": "^4.0.3",
     "next": "latest",
     "react": "^17.0.2",
